--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "firebase": "^7.17.2",
+    "is_js": "^0.9.0",
+    "node-sass": "^4.12.0",
     "register-service-worker": "^1.7.1",
+    "sass-loader": "^8.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
