--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@sentry/browser": "^5.20.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "firebase": "^7.17.2",
