--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@sentry/browser": "^5.20.1",
     "@sentry/integrations": "^5.20.1",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
     "firebase": "^7.17.2",
+    "google-fonts-webpack-plugin": "^0.4.4",
     "is_js": "^0.9.0",
     "node-sass": "^4.12.0",
     "register-service-worker": "^1.7.1",
     "sass-loader": "^8.0.0",
     "vue": "^2.6.11",
+    "vue-head": "^2.2.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^3.0.1"
