--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^2.6.11",
     "vue-head": "^2.2.0",
     "vue-router": "^3.2.0",
+    "vue2-animate": "^2.1.3",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^3.0.1"
   },
