--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "register-service-worker": "^1.7.1",
     "sass-loader": "^8.0.0",
     "vue": "^2.6.11",
+    "vue-ellipse-progress": "^1.2.0",
     "vue-head": "^2.2.0",
     "vue-router": "^3.2.0",
     "vue-tel-input": "^4.4.0",
